--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "himanshu-chandola-portfolio",
+  "name": "sumit-katkam-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
     "react-type-animation": "^3.2.0",
