--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,6 @@
 {
-  "short_name": "Himanshu Portfolio",
-  "name": "Portfolio of Himanshu Chandola",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "android-chrome-192x192",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "android-chrome-512x512",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+  "short_name": "Sumit Katkam",
+  "name": "Portfolio of Sumit Katkam",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
